--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section {
 /* IMAGE */
 .images {
     position: relative;
-    width: 300px;
+    width: fit-content;
     height: 200px;
     width: 100%;
     background-image: url('./images/image-header-mobile.jpg');
@@ -141,12 +141,12 @@ section {
         flex-direction: row-reverse;
         width: 1000px;
         max-width: 100%;
-        height: 400px;
+        height: 350px;
     }
         
     .images {
         max-width: 50%;
-        height: 400px;
+        height: 350px;
         background-image: url('./images/image-header-desktop.jpg');
         border-top-left-radius: 0;
         border-bottom-right-radius: 10px;
@@ -160,11 +160,11 @@ section {
 
     .desc {
         text-align: left;
-        margin: 5.5em;
+        margin: 5em;
     }
 
     .desc-middle {
-        margin-bottom: 4em;
+        margin-bottom: 2em;
     }
 
     .desc-bottom {
